Fixes #534. Help button is visible in the filters and the menu it opens is visible too (it wasn't in IE7)
--HG--
extra : convert_revision : svn%3A2a98c5bb-d66c-48ca-a96c-db028a6c31f4/ezweb_platform/src/trunk%402702

--- a/media/css/ezweb.css
+++ b/media/css/ezweb.css
@@ -306,6 +306,14 @@ body.shared .tab_dragger{
   white-space: nowrap;
 }
 
+.drop_down_menu .help_text{
+	font-size: 80%;
+	padding: 0px;
+	white-space: pre;
+	cursor: default;
+}
+
+
 .gadget_menu_locked .hide_on_lock{
 	display: none;
 }
@@ -329,7 +337,7 @@ body.shared .tab_dragger{
  font-size: 90%;
 }
 
-.drop_down_menu div .help_buttom {
+.drop_down_menu div .help_button {
   position: absolute;
   right: 10px;
   margin-left: 5px;
