--- a/media/themes/darkBlue/css/ezweb.css
+++ b/media/themes/darkBlue/css/ezweb.css
@@ -277,8 +277,10 @@ input[type="text"], input[type="password"], textarea{
 	border-bottom: 4px double #FFFFFF;
 }
 
-.drop_down_menu div .help_buttom {
+.drop_down_menu div .help_button {
   background: transparent url(../images/help.gif) no-repeat scroll 0 0;
+  width: 16px;
+  height: 16px;
 }
 
 .underlined {
